--- a/index.html
+++ b/index.html
@@ -2,104 +2,52 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Sorteador Profesional</title>
+<title>Sorteador</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 
 <style>
 
 body{
-    font-family:'Poppins', sans-serif;
-    background:linear-gradient(135deg,#667eea,#764ba2);
-    color:white;
-    text-align:center;
+    font-family:'Poppins',sans-serif;
+    background:linear-gradient(135deg,#4facfe,#00f2fe);
     margin:0;
+    text-align:center;
+    color:white;
 }
 
 h1{
     margin-top:20px;
+}
+
+canvas{
+    margin-top:30px;
+}
+
+button{
+    margin-top:25px;
+    padding:15px 45px;
+    font-size:20px;
+    border:none;
+    border-radius:10px;
+    background:#00e676;
+    cursor:pointer;
     font-weight:600;
 }
 
-#evento{
-    opacity:.9;
-    margin-bottom:10px;
+#resultado{
+    font-size:38px;
+    margin-top:20px;
+    font-weight:600;
 }
 
 .pointer{
     width:0;
     height:0;
-    border-left:18px solid transparent;
-    border-right:18px solid transparent;
-    border-top:35px solid white;
-    margin:10px auto -15px auto;
-    z-index:10;
-    position:relative;
-}
-
-#wheel-container{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
-
-#wheel{
-    width:420px;
-    height:420px;
-    border-radius:50%;
-    border:12px solid white;
-    position:relative;
-    overflow:hidden;
-    box-shadow:0 20px 60px rgba(0,0,0,.4);
-}
-
-.slice{
-    position:absolute;
-    width:50%;
-    height:50%;
-    top:50%;
-    left:50%;
-    transform-origin:0% 0%;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:14px;
-    font-weight:600;
-}
-
-button{
-    margin-top:25px;
-    padding:16px 45px;
-    font-size:20px;
-    border:none;
-    border-radius:12px;
-    background:#00f5a0;
-    color:#003;
-    font-weight:600;
-    cursor:pointer;
-    box-shadow:0 8px 25px rgba(0,0,0,.3);
-}
-
-button:hover{
-    transform:scale(1.05);
-}
-
-#resultado{
-    font-size:42px;
-    margin-top:25px;
-    font-weight:600;
-}
-
-#contador{
-    margin-top:10px;
-    opacity:.85;
-}
-
-canvas{
-    position:fixed;
-    pointer-events:none;
-    top:0;
-    left:0;
+    border-left:20px solid transparent;
+    border-right:20px solid transparent;
+    border-bottom:40px solid white;
+    margin:auto;
 }
 
 </style>
@@ -107,168 +55,60 @@ canvas{
 
 <body>
 
-<h1>🎉 Sorteador de Bingo 🎉</h1>
-<div id="evento"></div>
+<h1 id="titulo">🎉 Sorteo 🎉</h1>
 
 <div class="pointer"></div>
 
-<div id="wheel-container">
-    <div id="wheel"></div>
-</div>
+<canvas id="wheel" width="450" height="450"></canvas>
 
-<button onclick="spin()">GIRAR</button>
+<br>
+<button onclick="girar()">GIRAR</button>
 
 <div id="resultado"></div>
-<div id="contador"></div>
-
-<canvas id="confetti"></canvas>
-
-<audio id="tick" src="https://assets.mixkit.co/sfx/preview/mixkit-slot-machine-spin-1930.mp3"></audio>
-<audio id="win" src="https://assets.mixkit.co/sfx/preview/mixkit-winning-chimes-2015.mp3"></audio>
 
 <script>
 
-// PARAMETROS DESDE URL
+// PARAMETROS DEL LINK
 const params = new URLSearchParams(window.location.search);
 
-let lista = params.get("lista");
-let evento = params.get("evento");
+const titulo = params.get("titulo");
+const lista = params.get("lista");
 
-document.getElementById("evento").innerText = evento ? evento : "";
-
-let palabras = lista ? decodeURIComponent(lista).split(",") :
-["Ejemplo 1","Ejemplo 2","Ejemplo 3"];
-
-const wheel = document.getElementById("wheel");
-
-function color(i){
-    const colores=["#ff6b6b","#feca57","#48dbfb","#1dd1a1","#5f27cd","#ff9ff3"];
-    return colores[i%colores.length];
+if(titulo){
+    document.getElementById("titulo").innerText = decodeURIComponent(titulo);
 }
 
-function crearRuleta(){
+let palabras = lista
+? decodeURIComponent(lista).split(",")
+: ["Ejemplo 1","Ejemplo 2","Ejemplo 3"];
 
-wheel.innerHTML="";
+const canvas = document.getElementById("wheel");
+const ctx = canvas.getContext("2d");
 
-let angle = 360/palabras.length;
+let startAngle = 0;
 
-palabras.forEach((p,i)=>{
-
-let slice=document.createElement("div");
-slice.className="slice";
-slice.style.background=color(i);
-slice.style.transform=`rotate(${i*angle}deg) skewY(${90-angle}deg)`;
-
-slice.innerHTML=
-`<span style="
-transform:skewY(-${90-angle}deg) rotate(${angle/2}deg);
-display:block;
-width:160px;">
-${p}
-</span>`;
-
-wheel.appendChild(slice);
-
-});
-
-document.getElementById("contador").innerText =
-"Quedan "+palabras.length+" palabras";
-
+function colores(i){
+    const c=[
+        "#ff7675","#74b9ff","#55efc4",
+        "#ffeaa7","#a29bfe","#fd79a8"
+    ];
+    return c[i % c.length];
 }
 
-crearRuleta();
+function dibujarRuleta(){
 
-let rotation=0;
+const arc = Math.PI*2 / palabras.length;
 
-function spin(){
+ctx.clearRect(0,0,500,500);
 
-if(palabras.length===0){
-document.getElementById("resultado").innerText="Sin palabras";
-return;
-}
+palabras.forEach((palabra,i)=>{
 
-document.getElementById("tick").play();
-
-let randomIndex=Math.floor(Math.random()*palabras.length);
-let angle=360/palabras.length;
-
-rotation += 360*6 + randomIndex*angle;
-
-wheel.style.transition="transform 5s cubic-bezier(.1,.7,.1,1)";
-wheel.style.transform=`rotate(-${rotation}deg)`;
-
-setTimeout(()=>{
-
-document.getElementById("tick").pause();
-document.getElementById("win").play();
-
-let ganador=palabras.splice(randomIndex,1);
-
-document.getElementById("resultado").innerText=ganador;
-
-crearRuleta();
-
-confetti();
-
-},5000);
-
-}
-
-// CONFETTI SIMPLE
-function confetti(){
-
-const canvas=document.getElementById("confetti");
-const ctx=canvas.getContext("2d");
-
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
-
-let pieces=[];
-
-for(let i=0;i<150;i++){
-pieces.push({
-x:Math.random()*canvas.width,
-y:Math.random()*canvas.height- canvas.height,
-r:Math.random()*6+4,
-d:Math.random()*50
-});
-}
-
-let angle=0;
-
-function draw(){
-
-ctx.clearRect(0,0,canvas.width,canvas.height);
-
-angle+=0.01;
-
-for(let i=0;i<pieces.length;i++){
-
-let p=pieces[i];
+const angle = startAngle + i*arc;
 
 ctx.beginPath();
-ctx.arc(p.x,p.y,p.r,0,Math.PI*2,false);
-ctx.fillStyle=color(i);
+ctx.moveTo(225,225);
+ctx.arc(225,225,225,angle,angle+arc);
+ctx.fillStyle = colores(i);
 ctx.fill();
 
-p.y+=Math.cos(angle+p.d)+3;
-
-if(p.y>canvas.height){
-p.y=-10;
-}
-
-}
-
-requestAnimationFrame(draw);
-}
-
-draw();
-
-setTimeout(()=>ctx.clearRect(0,0,canvas.width,canvas.height),4000);
-
-}
-
-</script>
-
-</body>
-</html>
+//
