--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sorteador Profesional</title>
+<title>Personaliza tu Bingo</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
 
@@ -119,7 +119,7 @@ canvas{
 
 <body>
 
-<h1>🎉 Sorteador Profesional 🎉</h1>
+<h1>🎉 Personaliza tu Bingo 🎉</h1>
 <div id="evento"></div>
 
 <div class="pointer"></div>
