--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ const params = new URLSearchParams(window.location.search);
 const id = params.get("id") || "demo";
 const modoTV = params.get("modo");
 
-const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json?nocache=${Date.now()}`;
+const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json`;
     
 let palabras = [];
 let originales = [];
