--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -51,8 +52,8 @@ h1{
 }
 
 #wheel{
-    width:min(90vw,420px);
-    height:min(90vw,420px);
+    width:420px;
+    height:420px;
     border-radius:50%;
     border:12px solid white;
     position:relative;
@@ -72,9 +73,8 @@ h1{
     display:flex;
     align-items:center;
     justify-content:center;
-    font-size:clamp(10px,2vw,14px);
+    font-size:14px;
     font-weight:600;
-    text-align:center;
 }
 
 button{
@@ -96,7 +96,7 @@ button:hover{
 }
 
 #resultado{
-    font-size:clamp(32px,8vw,72px);
+    font-size:72px;
     margin-top:25px;
     font-weight:800;
     line-height:1.1;
@@ -143,7 +143,7 @@ canvas{
 <button onclick="fullscreen()">PANTALLA COMPLETA</button>
 </div>
 
-<div id="resultado" aria-live="polite"></div>
+<div id="resultado"></div>
 <div id="contador"></div>
 <div id="historial"></div>
 
@@ -162,7 +162,7 @@ const params = new URLSearchParams(window.location.search);
 const id = params.get("id") || "demo";
 const modoTV = params.get("modo");
 
-const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json`;
+const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json?nocache=${Date.now()}`;
     
 let palabras = [];
 let originales = [];
@@ -213,28 +213,15 @@ fetch(DATA_URL)
 const wheel = document.getElementById("wheel");
 const spinBtn = document.getElementById("spinBtn");
 
-function guardarEstado(){
-    localStorage.setItem(id, JSON.stringify({palabras, historial}));
-}
-
 // Genera un color distinto para cada palabra
 function color(i){
-    const hue = Math.floor((360 / Math.max(palabras.length,1)) * i);
+    const hue = Math.floor((360 / palabras.length) * i);
     return `hsl(${hue}, 75%, 60%)`;
-}
-
-function randomColor(){
-    return `hsl(${Math.random()*360}, 75%, 60%)`;
 }
 
 function crearRuleta(){
 
 wheel.innerHTML="";
-
-if(palabras.length === 0){
-    actualizarUI();
-    return;
-}
 
 let angle = 360/palabras.length;
 
@@ -242,4 +229,161 @@ palabras.forEach((p,i)=>{
 
 let slice=document.createElement("div");
 slice.className="slice";
-slice.style.background=colo
+slice.style.background=color(i);
+slice.style.transform=`rotate(${i*angle}deg) skewY(${90-angle}deg)`;
+
+slice.innerHTML=
+`<span style="
+transform:skewY(-${90-angle}deg) rotate(${angle/2}deg);
+display:block;
+width:160px;">
+${p}
+</span>`;
+
+wheel.appendChild(slice);
+
+});
+
+actualizarUI();
+}
+
+function actualizarUI(){
+
+    document.getElementById("contador").innerText =
+    "Quedan "+palabras.length+" palabras";
+
+    document.getElementById("historial").innerHTML =
+    historial.length
+    ? "<b>Historial:</b><br>" + historial.join("<br>")
+    : "";
+}
+
+let rotation=0;
+let girando=false;
+
+function spin(){
+
+if(girando) return;
+
+if(palabras.length===0){
+document.getElementById("resultado").innerText="SIN PALABRAS";
+return;
+}
+
+girando=true;
+
+document.getElementById("tick").play();
+
+let angle=360/palabras.length;
+
+// Elegimos ganador primero
+let index = Math.floor(Math.random()*palabras.length);
+
+// Calculamos el ángulo exacto donde debe detenerse
+let stopAngle = index * angle + angle/2;
+
+// Siempre hacer giros largos (8 a 12 vueltas)
+let vueltas = 8 + Math.floor(Math.random()*5);
+
+rotation += vueltas*360 + (360 - stopAngle);
+
+wheel.style.transition="transform 5s cubic-bezier(.12,.8,.18,1)";
+wheel.style.transform=`rotate(-${rotation}deg)`;
+
+setTimeout(()=>{
+
+let ganador=palabras.splice(index,1)[0];
+
+historial.unshift("🎉 " + ganador);
+
+
+document.getElementById("resultado").innerText=ganador.toUpperCase();
+
+crearRuleta();
+
+confetti();
+
+document.getElementById("tick").pause();
+document.getElementById("win").play();
+
+girando=false;
+
+},5000);
+
+}
+
+////////////////////////////////////////////////////
+
+function resetear(){
+    palabras=[...originales];
+    historial=[];
+    localStorage.removeItem(id);
+    document.getElementById("resultado").innerText="";
+    crearRuleta();
+}
+
+function fullscreen(){
+    document.documentElement.requestFullscreen();
+}
+
+////////////////////////////////////////////////////
+// CONFETTI
+////////////////////////////////////////////////////
+
+function confetti(){
+
+const canvas=document.getElementById("confetti");
+const ctx=canvas.getContext("2d");
+
+canvas.width=window.innerWidth;
+canvas.height=window.innerHeight;
+
+let pieces=[];
+
+for(let i=0;i<150;i++){
+pieces.push({
+x:Math.random()*canvas.width,
+y:Math.random()*canvas.height- canvas.height,
+r:Math.random()*6+4,
+d:Math.random()*50
+});
+}
+
+let angle=0;
+
+function draw(){
+
+ctx.clearRect(0,0,canvas.width,canvas.height);
+
+angle+=0.01;
+
+for(let i=0;i<pieces.length;i++){
+
+let p=pieces[i];
+
+ctx.beginPath();
+ctx.arc(p.x,p.y,p.r,0,Math.PI*2,false);
+ctx.fillStyle=color(i);
+ctx.fill();
+
+p.y+=Math.cos(angle+p.d)+3;
+
+if(p.y>canvas.height){
+p.y=-10;
+}
+
+}
+
+requestAnimationFrame(draw);
+}
+
+draw();
+
+setTimeout(()=>ctx.clearRect(0,0,canvas.width,canvas.height),4000);
+
+}
+
+</script>
+
+</body>
+</html>
