--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -51,30 +50,12 @@ h1{
     align-items:center;
 }
 
-#wheel{
-    width:420px;
-    height:420px;
+canvas#wheel{
     border-radius:50%;
     border:12px solid white;
-    position:relative;
-    overflow:hidden;
     box-shadow:
     inset 0 0 40px rgba(0,0,0,.4),
     0 20px 60px rgba(0,0,0,.4);
-}
-
-.slice{
-    position:absolute;
-    width:50%;
-    height:50%;
-    top:50%;
-    left:50%;
-    transform-origin:0% 0%;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:14px;
-    font-weight:600;
 }
 
 button{
@@ -115,7 +96,7 @@ button:hover{
     opacity:.9;
 }
 
-canvas{
+canvas#confetti{
     position:fixed;
     pointer-events:none;
     top:0;
@@ -134,7 +115,7 @@ canvas{
 <div class="pointer"></div>
 
 <div id="wheel-container">
-    <div id="wheel"></div>
+    <canvas id="wheel" width="500" height="500"></canvas>
 </div>
 
 <div id="controls">
@@ -155,9 +136,6 @@ canvas{
 <script>
 
 ////////////////////////////////////////////////////
-// PARAMETROS
-////////////////////////////////////////////////////
-
 const params = new URLSearchParams(window.location.search);
 const id = params.get("id") || "demo";
 const modoTV = params.get("modo");
@@ -167,6 +145,19 @@ const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/m
 let palabras = [];
 let originales = [];
 let historial = [];
+
+////////////////////////////////////////////////////
+// CANVAS
+////////////////////////////////////////////////////
+
+const canvas = document.getElementById("wheel");
+const ctx = canvas.getContext("2d");
+const radius = canvas.width/2;
+
+function color(i){
+    const hue = Math.floor((360 / palabras.length) * i);
+    return `hsl(${hue}, 75%, 60%)`;
+}
 
 ////////////////////////////////////////////////////
 // FETCH
@@ -209,54 +200,71 @@ fetch(DATA_URL)
 });
 
 ////////////////////////////////////////////////////
-
-const wheel = document.getElementById("wheel");
-const spinBtn = document.getElementById("spinBtn");
-
-// Genera un color distinto para cada palabra
-function color(i){
-    const hue = Math.floor((360 / palabras.length) * i);
-    return `hsl(${hue}, 75%, 60%)`;
-}
+// CREAR RULETA
+////////////////////////////////////////////////////
 
 function crearRuleta(){
 
-wheel.innerHTML="";
+ctx.clearRect(0,0,canvas.width,canvas.height);
 
-let angle = 360/palabras.length;
+let angle = (2*Math.PI)/palabras.length;
 
 palabras.forEach((p,i)=>{
 
-let slice=document.createElement("div");
-slice.className="slice";
-slice.style.background=color(i);
-slice.style.transform=`rotate(${i*angle}deg) skewY(${90-angle}deg)`;
+let start = i*angle;
+let end = start + angle;
 
-slice.innerHTML=
-`<span style="
-transform:skewY(-${90-angle}deg) rotate(${angle/2}deg);
-display:block;
-width:160px;">
-${p}
-</span>`;
+// slice
+ctx.beginPath();
+ctx.moveTo(radius,radius);
+ctx.arc(radius,radius,radius,start,end);
+ctx.fillStyle = color(i);
+ctx.fill();
 
-wheel.appendChild(slice);
+// texto
+ctx.save();
+
+ctx.translate(radius,radius);
+ctx.rotate(start + angle/2);
+
+ctx.textAlign="right";
+ctx.fillStyle="#fff";
+
+let fontSize = Math.max(14, 34 - palabras.length*0.7);
+ctx.font=`bold ${fontSize}px Poppins`;
+
+ctx.fillText(p, radius-20, 8);
+
+ctx.restore();
 
 });
 
 actualizarUI();
 }
 
+////////////////////////////////////////////////////
+// UI
+////////////////////////////////////////////////////
+
 function actualizarUI(){
 
-    document.getElementById("contador").innerText =
-    "Quedan "+palabras.length+" palabras";
+document.getElementById("contador").innerText =
+"Quedan "+palabras.length+" palabras";
 
-    document.getElementById("historial").innerHTML =
-    historial.length
-    ? "<b>Historial:</b><br>" + historial.join("<br>")
-    : "";
+document.getElementById("historial").innerHTML =
+historial.length
+? "<b>Historial:</b><br>" + historial.join("<br>")
+: "";
+
+localStorage.setItem(id, JSON.stringify({
+palabras,
+historial
+}));
 }
+
+////////////////////////////////////////////////////
+// SPIN PRO
+////////////////////////////////////////////////////
 
 let rotation=0;
 let girando=false;
@@ -271,59 +279,74 @@ return;
 }
 
 girando=true;
-
 document.getElementById("tick").play();
 
-let angle=360/palabras.length;
-
-// Elegimos ganador primero
+let angle = 360/palabras.length;
 let index = Math.floor(Math.random()*palabras.length);
 
-// Calculamos el ángulo exacto donde debe detenerse
-let stopAngle = index * angle + angle/2;
-
-// Siempre hacer giros largos (8 a 12 vueltas)
+let stopAngle = index*angle + angle/2;
 let vueltas = 8 + Math.floor(Math.random()*5);
 
-rotation += vueltas*360 + (360 - stopAngle);
+let finalRotation = rotation + vueltas*360 + (360-stopAngle);
 
-wheel.style.transition="transform 5s cubic-bezier(.12,.8,.18,1)";
-wheel.style.transform=`rotate(-${rotation}deg)`;
+let start=null;
+let duration=5000;
 
-setTimeout(()=>{
+function animate(timestamp){
 
-let ganador=palabras.splice(index,1)[0];
+if(!start) start=timestamp;
 
+let progress = timestamp-start;
+let t = progress/duration;
+let ease = 1-Math.pow(1-t,4);
+
+let current = rotation + (finalRotation-rotation)*ease;
+
+ctx.setTransform(1,0,0,1,0,0);
+ctx.clearRect(0,0,canvas.width,canvas.height);
+
+ctx.translate(radius,radius);
+ctx.rotate(-current*Math.PI/180);
+ctx.translate(-radius,-radius);
+
+crearRuleta();
+
+if(progress < duration){
+requestAnimationFrame(animate);
+}else{
+
+rotation = finalRotation % 360;
+
+let ganador = palabras.splice(index,1)[0];
 historial.unshift("🎉 " + ganador);
-
 
 document.getElementById("resultado").innerText=ganador.toUpperCase();
 
 crearRuleta();
-
 confetti();
 
 document.getElementById("tick").pause();
 document.getElementById("win").play();
 
 girando=false;
+}
+}
 
-},5000);
-
+requestAnimationFrame(animate);
 }
 
 ////////////////////////////////////////////////////
 
 function resetear(){
-    palabras=[...originales];
-    historial=[];
-    localStorage.removeItem(id);
-    document.getElementById("resultado").innerText="";
-    crearRuleta();
+palabras=[...originales];
+historial=[];
+localStorage.removeItem(id);
+document.getElementById("resultado").innerText="";
+crearRuleta();
 }
 
 function fullscreen(){
-    document.documentElement.requestFullscreen();
+document.documentElement.requestFullscreen();
 }
 
 ////////////////////////////////////////////////////
@@ -332,18 +355,18 @@ function fullscreen(){
 
 function confetti(){
 
-const canvas=document.getElementById("confetti");
-const ctx=canvas.getContext("2d");
+const canvasC=document.getElementById("confetti");
+const ctxC=canvasC.getContext("2d");
 
-canvas.width=window.innerWidth;
-canvas.height=window.innerHeight;
+canvasC.width=window.innerWidth;
+canvasC.height=window.innerHeight;
 
 let pieces=[];
 
 for(let i=0;i<150;i++){
 pieces.push({
-x:Math.random()*canvas.width,
-y:Math.random()*canvas.height- canvas.height,
+x:Math.random()*canvasC.width,
+y:Math.random()*canvasC.height- canvasC.height,
 r:Math.random()*6+4,
 d:Math.random()*50
 });
@@ -353,22 +376,21 @@ let angle=0;
 
 function draw(){
 
-ctx.clearRect(0,0,canvas.width,canvas.height);
-
+ctxC.clearRect(0,0,canvasC.width,canvasC.height);
 angle+=0.01;
 
 for(let i=0;i<pieces.length;i++){
 
 let p=pieces[i];
 
-ctx.beginPath();
-ctx.arc(p.x,p.y,p.r,0,Math.PI*2,false);
-ctx.fillStyle=color(i);
-ctx.fill();
+ctxC.beginPath();
+ctxC.arc(p.x,p.y,p.r,0,Math.PI*2,false);
+ctxC.fillStyle=`hsl(${Math.random()*360},75%,60%)`;
+ctxC.fill();
 
 p.y+=Math.cos(angle+p.d)+3;
 
-if(p.y>canvas.height){
+if(p.y>canvasC.height){
 p.y=-10;
 }
 
@@ -379,7 +401,7 @@ requestAnimationFrame(draw);
 
 draw();
 
-setTimeout(()=>ctx.clearRect(0,0,canvas.width,canvas.height),4000);
+setTimeout(()=>ctxC.clearRect(0,0,canvasC.width,canvasC.height),4000);
 
 }
 
@@ -387,3 +409,4 @@ setTimeout(()=>ctx.clearRect(0,0,canvas.width,canvas.height),4000);
 
 </body>
 </html>
+
