--- a/index.html
+++ b/index.html
@@ -3,81 +3,49 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Personaliza tu Bingo</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
 
 <style>
 
 body{
-    font-family:'Poppins', sans-serif;
-    background:linear-gradient(135deg,#667eea,#764ba2);
-    color:white;
-    text-align:center;
-    margin:0;
-}
-
-h1{
-    margin-top:20px;
-    font-weight:800;
-}
-
-#loading{
-    margin-top:40px;
-    font-size:22px;
+font-family:'Poppins', sans-serif;
+background:linear-gradient(135deg,#667eea,#764ba2);
+color:white;
+text-align:center;
+margin:0;
 }
 
 .pointer{
-    width:0;
-    height:0;
-    border-left:18px solid transparent;
-    border-right:18px solid transparent;
-    border-top:35px solid white;
-    margin:10px auto -15px auto;
+width:0;
+height:0;
+border-left:18px solid transparent;
+border-right:18px solid transparent;
+border-top:35px solid white;
+margin:20px auto -10px auto;
 }
 
-#wheel-container{
-    display:flex;
-    justify-content:center;
-}
-
-canvas#wheel{
-    border-radius:50%;
-    border:12px solid white;
-    box-shadow:0 20px 60px rgba(0,0,0,.4);
+canvas{
+border-radius:50%;
+border:12px solid white;
+box-shadow:0 20px 60px rgba(0,0,0,.4);
 }
 
 button{
-    margin-top:20px;
-    padding:14px 35px;
-    font-size:18px;
-    border:none;
-    border-radius:12px;
-    background:#00f5a0;
-    color:#003;
-    font-weight:600;
-    cursor:pointer;
-    margin-right:10px;
+margin-top:20px;
+padding:14px 35px;
+font-size:18px;
+border:none;
+border-radius:12px;
+background:#00f5a0;
+font-weight:600;
+cursor:pointer;
 }
 
 #resultado{
-    font-size:64px;
-    margin-top:25px;
-    font-weight:800;
-}
-
-#historial{
-    margin-top:20px;
-    max-width:400px;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-canvas#confetti{
-    position:fixed;
-    pointer-events:none;
-    top:0;
-    left:0;
+font-size:64px;
+margin-top:20px;
+font-weight:800;
 }
 
 </style>
@@ -86,93 +54,58 @@ canvas#confetti{
 <body>
 
 <h1>🎉 Personaliza tu Bingo 🎉</h1>
-<div id="loading">Cargando bingo...</div>
-<div id="evento"></div>
 
 <div class="pointer"></div>
 
-<div id="wheel-container">
 <canvas id="wheel" width="500" height="500"></canvas>
-</div>
 
-<div id="controls">
+<br>
 <button onclick="spin()">GIRAR</button>
-<button onclick="resetear()">REINICIAR</button>
-<button onclick="fullscreen()">PANTALLA COMPLETA</button>
-</div>
 
 <div id="resultado"></div>
-<div id="contador"></div>
-<div id="historial"></div>
-
-<canvas id="confetti"></canvas>
-
-<audio id="tick" src="https://assets.mixkit.co/sfx/preview/mixkit-slot-machine-spin-1930.mp3"></audio>
-<audio id="win" src="https://assets.mixkit.co/sfx/preview/mixkit-winning-chimes-2015.mp3"></audio>
 
 <script>
 
 ////////////////////////////////////////////////////
-const params = new URLSearchParams(window.location.search);
-const id = params.get("id") || "demo";
 
-const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json?nocache=${Date.now()}`;
-    
-let palabras = [];
-let originales = [];
-let historial = [];
+const palabras = [
+"PERRO","GATO","CASA","AUTO","PLAYA",
+"VIAJE","AMIGOS","FIESTA","CHILE","FUTBOL"
+];
 
 const canvas = document.getElementById("wheel");
 const ctx = canvas.getContext("2d");
 const radius = canvas.width/2;
 
-////////////////////////////////////////////////////
-// FETCH
-////////////////////////////////////////////////////
-
-fetch(DATA_URL)
-.then(r=>r.json())
-.then(data=>{
-
-const guardado = localStorage.getItem(id);
-
-if(guardado){
-const estado = JSON.parse(guardado);
-palabras = estado.palabras;
-historial = estado.historial;
-}else{
-palabras = [...data.lista];
-}
-
-originales = [...data.lista];
-
-document.getElementById("evento").innerText = data.evento || "";
-document.getElementById("loading").style.display="none";
-
-crearRuleta();
-});
+let rotation = 0;
+let girando = false;
 
 ////////////////////////////////////////////////////
 
 function color(i){
-const hue = Math.floor((360 / palabras.length) * i);
+const hue = Math.floor((360/palabras.length)*i);
 return `hsl(${hue},75%,60%)`;
 }
 
 ////////////////////////////////////////////////////
-// CREAR RULETA
+// DIBUJAR RULETA
 ////////////////////////////////////////////////////
 
-function crearRuleta(){
+function drawWheel(rotDeg=0){
 
+ctx.setTransform(1,0,0,1,0,0);
 ctx.clearRect(0,0,canvas.width,canvas.height);
+
+ctx.translate(radius,radius);
+ctx.rotate(rotDeg*Math.PI/180);
+ctx.translate(-radius,-radius);
 
 const angle = (2*Math.PI)/palabras.length;
 
 palabras.forEach((p,i)=>{
 
-const start = i*angle;
-const end = start + angle;
+const start=i*angle;
+const end=start+angle;
 
 ctx.beginPath();
 ctx.moveTo(radius,radius);
@@ -183,91 +116,71 @@ ctx.fill();
 ctx.save();
 
 ctx.translate(radius,radius);
-ctx.rotate(start + angle/2);
+ctx.rotate(start+angle/2);
 
 ctx.textAlign="right";
 ctx.fillStyle="#fff";
+ctx.font="bold 20px Poppins";
 
-let fontSize = Math.max(16, 36 - palabras.length*0.7);
-ctx.font=`bold ${fontSize}px Poppins`;
-
-ctx.fillText(p, radius-20, 8);
+ctx.fillText(p,radius-15,7);
 
 ctx.restore();
 
 });
-
-actualizarUI();
 }
 
-////////////////////////////////////////////////////
-
-function actualizarUI(){
-
-document.getElementById("contador").innerText =
-"Quedan "+palabras.length+" palabras";
-
-document.getElementById("historial").innerHTML =
-historial.length
-? "<b>Historial:</b><br>"+historial.join("<br>")
-: "";
-
-localStorage.setItem(id, JSON.stringify({
-palabras,
-historial
-}));
-}
+drawWheel();
 
 ////////////////////////////////////////////////////
-// SPIN PERFECTAMENTE ALINEADO
+// SPIN PERFECTO (SIN DRIFT)
 ////////////////////////////////////////////////////
-
-let rotation = 0;
-let girando=false;
 
 function spin(){
 
 if(girando) return;
-if(palabras.length===0) return;
-
 girando=true;
-document.getElementById("tick").play();
 
-const sliceAngle = 360/palabras.length;
+// normalizar rotación SIEMPRE
+rotation = rotation % 360;
+
+const slice = 360/palabras.length;
 const index = Math.floor(Math.random()*palabras.length);
 
-// Aguja está arriba → 270°
-const pointerAngle = 270;
+// centro del ganador
+const winnerAngle = index*slice + slice/2;
 
-const targetAngle = index*sliceAngle + sliceAngle/2;
-const delta = pointerAngle - targetAngle;
+// flecha arriba
+const pointer = 270;
 
-const spins = 8 + Math.floor(Math.random()*4);
+// cuánto falta para alinear DESDE la rotación actual
+let delta = pointer - (winnerAngle + rotation);
+
+// evitar giros hacia atrás
+if(delta < 0) delta += 360;
+
+// giros largos
+const spins = 6 + Math.random()*4;
+
 const finalRotation = rotation + spins*360 + delta;
 
 let start=null;
-const duration=5200;
+const duration=5000;
 
 function animate(ts){
 
 if(!start) start=ts;
 
-let progress = ts-start;
-let t = progress/duration;
-let ease = 1-Math.pow(1-t,5);
+let progress=ts-start;
+let t=progress/duration;
 
-let current = rotation + (finalRotation-rotation)*ease;
+// easing tipo casino
+let ease=1-Math.pow(1-t,5);
 
-ctx.setTransform(1,0,0,1,0,0);
-ctx.clearRect(0,0,canvas.width,canvas.height);
+let current=rotation+(finalRotation-rotation)*ease;
 
-ctx.translate(radius,radius);
-ctx.rotate(current*Math.PI/180);
-ctx.translate(-radius,-radius);
+drawWheel(current);
 
-crearRuleta();
-
-if(progress < duration){
+if(progress<duration){
 
 requestAnimationFrame(animate);
 
@@ -275,87 +188,14 @@ requestAnimationFrame(animate);
 
 rotation = finalRotation % 360;
 
-let ganador = palabras.splice(index,1)[0];
-historial.unshift("🎉 "+ganador);
-
-document.getElementById("resultado").innerText=ganador.toUpperCase();
-
-crearRuleta();
-confetti();
-
-document.getElementById("tick").pause();
-document.getElementById("win").play();
+document.getElementById("resultado").innerText=
+palabras[index];
 
 girando=false;
 }
 }
 
 requestAnimationFrame(animate);
-}
-
-////////////////////////////////////////////////////
-
-function resetear(){
-palabras=[...originales];
-historial=[];
-localStorage.removeItem(id);
-document.getElementById("resultado").innerText="";
-crearRuleta();
-}
-
-function fullscreen(){
-document.documentElement.requestFullscreen();
-}
-
-////////////////////////////////////////////////////
-// CONFETTI
-////////////////////////////////////////////////////
-
-function confetti(){
-
-const canvasC=document.getElementById("confetti");
-const ctxC=canvasC.getContext("2d");
-
-canvasC.width=window.innerWidth;
-canvasC.height=window.innerHeight;
-
-let pieces=[];
-
-for(let i=0;i<150;i++){
-pieces.push({
-x:Math.random()*canvasC.width,
-y:Math.random()*canvasC.height-canvasC.height,
-r:Math.random()*6+4,
-d:Math.random()*50
-});
-}
-
-let angle=0;
-
-function draw(){
-
-ctxC.clearRect(0,0,canvasC.width,canvasC.height);
-angle+=0.01;
-
-for(let p of pieces){
-
-ctxC.beginPath();
-ctxC.arc(p.x,p.y,p.r,0,Math.PI*2);
-ctxC.fillStyle=`hsl(${Math.random()*360},75%,60%)`;
-ctxC.fill();
-
-p.y+=3;
-
-if(p.y>canvasC.height) p.y=-10;
-}
-
-requestAnimationFrame(draw);
-}
-
-draw();
-
-setTimeout(()=>ctxC.clearRect(0,0,canvasC.width,canvasC.height),4000);
-
 }
 
 </script>
