--- a/index.html
+++ b/index.html
@@ -3,49 +3,104 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Personaliza tu Bingo</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
 
 <style>
 
 body{
-font-family:'Poppins', sans-serif;
-background:linear-gradient(135deg,#667eea,#764ba2);
-color:white;
-text-align:center;
-margin:0;
+    font-family:'Poppins', sans-serif;
+    background:linear-gradient(135deg,#667eea,#764ba2);
+    color:white;
+    text-align:center;
+    margin:0;
+}
+
+h1{
+    margin-top:20px;
+    font-weight:800;
+}
+
+#loading{
+    margin-top:40px;
+    font-size:22px;
+    opacity:.9;
+}
+
+#evento{
+    opacity:.9;
+    margin-bottom:10px;
 }
 
 .pointer{
-width:0;
-height:0;
-border-left:18px solid transparent;
-border-right:18px solid transparent;
-border-top:35px solid white;
-margin:20px auto -10px auto;
+    width:0;
+    height:0;
+    border-left:18px solid transparent;
+    border-right:18px solid transparent;
+    border-top:35px solid white;
+    margin:10px auto -15px auto;
+    z-index:10;
+    position:relative;
 }
 
-canvas{
-border-radius:50%;
-border:12px solid white;
-box-shadow:0 20px 60px rgba(0,0,0,.4);
+#wheel-container{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+canvas#wheel{
+    border-radius:50%;
+    border:12px solid white;
+    box-shadow:
+    inset 0 0 40px rgba(0,0,0,.4),
+    0 20px 60px rgba(0,0,0,.4);
 }
 
 button{
-margin-top:20px;
-padding:14px 35px;
-font-size:18px;
-border:none;
-border-radius:12px;
-background:#00f5a0;
-font-weight:600;
-cursor:pointer;
+    margin-top:20px;
+    padding:14px 35px;
+    font-size:18px;
+    border:none;
+    border-radius:12px;
+    background:#00f5a0;
+    color:#003;
+    font-weight:600;
+    cursor:pointer;
+    box-shadow:0 8px 25px rgba(0,0,0,.3);
+    margin-right:10px;
+}
+
+button:hover{
+    transform:scale(1.05);
 }
 
 #resultado{
-font-size:64px;
-margin-top:20px;
-font-weight:800;
+    font-size:72px;
+    margin-top:25px;
+    font-weight:800;
+    line-height:1.1;
+}
+
+#contador{
+    margin-top:10px;
+    opacity:.85;
+}
+
+#historial{
+    margin-top:20px;
+    max-width:400px;
+    margin-left:auto;
+    margin-right:auto;
+    opacity:.9;
+}
+
+canvas#confetti{
+    position:fixed;
+    pointer-events:none;
+    top:0;
+    left:0;
 }
 
 </style>
@@ -54,148 +109,300 @@ font-weight:800;
 <body>
 
 <h1>🎉 Personaliza tu Bingo 🎉</h1>
+<div id="loading">Cargando bingo...</div>
+<div id="evento"></div>
 
 <div class="pointer"></div>
 
-<canvas id="wheel" width="500" height="500"></canvas>
+<div id="wheel-container">
+    <canvas id="wheel" width="500" height="500"></canvas>
+</div>
 
-<br>
-<button onclick="spin()">GIRAR</button>
+<div id="controls">
+<button id="spinBtn" onclick="spin()">GIRAR</button>
+<button onclick="resetear()">REINICIAR</button>
+<button onclick="fullscreen()">PANTALLA COMPLETA</button>
+</div>
 
 <div id="resultado"></div>
+<div id="contador"></div>
+<div id="historial"></div>
+
+<canvas id="confetti"></canvas>
+
+<audio id="tick" src="https://assets.mixkit.co/sfx/preview/mixkit-slot-machine-spin-1930.mp3"></audio>
+<audio id="win" src="https://assets.mixkit.co/sfx/preview/mixkit-winning-chimes-2015.mp3"></audio>
 
 <script>
 
 ////////////////////////////////////////////////////
+const params = new URLSearchParams(window.location.search);
+const id = params.get("id") || "demo";
+const modoTV = params.get("modo");
 
-const palabras = [
-"PERRO","GATO","CASA","AUTO","PLAYA",
-"VIAJE","AMIGOS","FIESTA","CHILE","FUTBOL"
-];
+const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json?nocache=${Date.now()}`;
+    
+let palabras = [];
+let originales = [];
+let historial = [];
+
+////////////////////////////////////////////////////
+// CANVAS
+////////////////////////////////////////////////////
 
 const canvas = document.getElementById("wheel");
 const ctx = canvas.getContext("2d");
 const radius = canvas.width/2;
 
-let rotation = 0;
-let girando = false;
-
-////////////////////////////////////////////////////
-
 function color(i){
-const hue = Math.floor((360/palabras.length)*i);
-return `hsl(${hue},75%,60%)`;
+    const hue = Math.floor((360 / palabras.length) * i);
+    return `hsl(${hue}, 75%, 60%)`;
 }
 
 ////////////////////////////////////////////////////
-// DIBUJAR RULETA
+// FETCH
 ////////////////////////////////////////////////////
 
-function drawWheel(rotDeg=0){
+fetch(DATA_URL)
+.then(r=>{
+    if(!r.ok) throw new Error("No se encontró el bingo");
+    return r.json();
+})
+.then(data=>{
+
+    const guardado = localStorage.getItem(id);
+
+    if(guardado){
+        const estado = JSON.parse(guardado);
+        palabras = estado.palabras;
+        historial = estado.historial;
+    }else{
+        palabras = [...data.lista];
+        historial = [];
+    }
+
+    originales = [...data.lista];
+
+    document.getElementById("evento").innerText = data.evento || "";
+    document.getElementById("loading").style.display="none";
+
+    if(modoTV === "tv"){
+        document.getElementById("controls").style.display="none";
+    }
+
+    crearRuleta();
+})
+.catch(()=>{
+    document.body.innerHTML = `
+        <h1>Bingo no encontrado</h1>
+        <p>Verifica el enlace.</p>
+    `;
+});
+
+////////////////////////////////////////////////////
+// CREAR RULETA
+////////////////////////////////////////////////////
+
+function crearRuleta(){
+
+ctx.clearRect(0,0,canvas.width,canvas.height);
+
+let angle = (2*Math.PI)/palabras.length;
+
+palabras.forEach((p,i)=>{
+
+let start = i*angle;
+let end = start + angle;
+
+// slice
+ctx.beginPath();
+ctx.moveTo(radius,radius);
+ctx.arc(radius,radius,radius,start,end);
+ctx.fillStyle = color(i);
+ctx.fill();
+
+// texto
+ctx.save();
+
+ctx.translate(radius,radius);
+ctx.rotate(start + angle/2);
+
+ctx.textAlign="right";
+ctx.fillStyle="#fff";
+
+let fontSize = Math.max(14, 34 - palabras.length*0.7);
+ctx.font=`bold ${fontSize}px Poppins`;
+
+ctx.fillText(p, radius-20, 8);
+
+ctx.restore();
+
+});
+
+actualizarUI();
+}
+
+////////////////////////////////////////////////////
+// UI
+////////////////////////////////////////////////////
+
+function actualizarUI(){
+
+document.getElementById("contador").innerText =
+"Quedan "+palabras.length+" palabras";
+
+document.getElementById("historial").innerHTML =
+historial.length
+? "<b>Historial:</b><br>" + historial.join("<br>")
+: "";
+
+localStorage.setItem(id, JSON.stringify({
+palabras,
+historial
+}));
+}
+
+////////////////////////////////////////////////////
+// SPIN PRO
+////////////////////////////////////////////////////
+
+let rotation=0;
+let girando=false;
+
+function spin(){
+
+if(girando) return;
+
+if(palabras.length===0){
+document.getElementById("resultado").innerText="SIN PALABRAS";
+return;
+}
+
+girando=true;
+document.getElementById("tick").play();
+
+let angle = 360/palabras.length;
+let index = Math.floor(Math.random()*palabras.length);
+
+let stopAngle = index*angle + angle/2;
+let vueltas = 8 + Math.floor(Math.random()*5);
+
+let finalRotation = rotation + vueltas*360 + (360-stopAngle);
+
+let start=null;
+let duration=5000;
+
+function animate(timestamp){
+
+if(!start) start=timestamp;
+
+let progress = timestamp-start;
+let t = progress/duration;
+let ease = 1-Math.pow(1-t,4);
+
+let current = rotation + (finalRotation-rotation)*ease;
 
 ctx.setTransform(1,0,0,1,0,0);
 ctx.clearRect(0,0,canvas.width,canvas.height);
 
 ctx.translate(radius,radius);
-ctx.rotate(rotDeg*Math.PI/180);
+ctx.rotate(-current*Math.PI/180);
 ctx.translate(-radius,-radius);
 
-const angle = (2*Math.PI)/palabras.length;
+crearRuleta();
 
-palabras.forEach((p,i)=>{
-
-const start=i*angle;
-const end=start+angle;
-
-ctx.beginPath();
-ctx.moveTo(radius,radius);
-ctx.arc(radius,radius,radius,start,end);
-ctx.fillStyle=color(i);
-ctx.fill();
-
-ctx.save();
-
-ctx.translate(radius,radius);
-ctx.rotate(start+angle/2);
-
-ctx.textAlign="right";
-ctx.fillStyle="#fff";
-ctx.font="bold 20px Poppins";
-
-ctx.fillText(p,radius-15,7);
-
-ctx.restore();
-
-});
-}
-
-drawWheel();
-
-////////////////////////////////////////////////////
-// SPIN PERFECTO (SIN DRIFT)
-////////////////////////////////////////////////////
-
-function spin(){
-
-if(girando) return;
-girando=true;
-
-// normalizar rotación SIEMPRE
-rotation = rotation % 360;
-
-const slice = 360/palabras.length;
-const index = Math.floor(Math.random()*palabras.length);
-
-// centro del ganador
-const winnerAngle = index*slice + slice/2;
-
-// flecha arriba
-const pointer = 270;
-
-// cuánto falta para alinear DESDE la rotación actual
-let delta = pointer - (winnerAngle + rotation);
-
-// evitar giros hacia atrás
-if(delta < 0) delta += 360;
-
-// giros largos
-const spins = 6 + Math.random()*4;
-
-const finalRotation = rotation + spins*360 + delta;
-
-let start=null;
-const duration=5000;
-
-function animate(ts){
-
-if(!start) start=ts;
-
-let progress=ts-start;
-let t=progress/duration;
-
-// easing tipo casino
-let ease=1-Math.pow(1-t,5);
-
-let current=rotation+(finalRotation-rotation)*ease;
-
-drawWheel(current);
-
-if(progress<duration){
-
+if(progress < duration){
 requestAnimationFrame(animate);
-
 }else{
 
 rotation = finalRotation % 360;
 
-document.getElementById("resultado").innerText=
-palabras[index];
+let ganador = palabras.splice(index,1)[0];
+historial.unshift("🎉 " + ganador);
+
+document.getElementById("resultado").innerText=ganador.toUpperCase();
+
+crearRuleta();
+confetti();
+
+document.getElementById("tick").pause();
+document.getElementById("win").play();
 
 girando=false;
 }
 }
 
 requestAnimationFrame(animate);
+}
+
+////////////////////////////////////////////////////
+
+function resetear(){
+palabras=[...originales];
+historial=[];
+localStorage.removeItem(id);
+document.getElementById("resultado").innerText="";
+crearRuleta();
+}
+
+function fullscreen(){
+document.documentElement.requestFullscreen();
+}
+
+////////////////////////////////////////////////////
+// CONFETTI
+////////////////////////////////////////////////////
+
+function confetti(){
+
+const canvasC=document.getElementById("confetti");
+const ctxC=canvasC.getContext("2d");
+
+canvasC.width=window.innerWidth;
+canvasC.height=window.innerHeight;
+
+let pieces=[];
+
+for(let i=0;i<150;i++){
+pieces.push({
+x:Math.random()*canvasC.width,
+y:Math.random()*canvasC.height- canvasC.height,
+r:Math.random()*6+4,
+d:Math.random()*50
+});
+}
+
+let angle=0;
+
+function draw(){
+
+ctxC.clearRect(0,0,canvasC.width,canvasC.height);
+angle+=0.01;
+
+for(let i=0;i<pieces.length;i++){
+
+let p=pieces[i];
+
+ctxC.beginPath();
+ctxC.arc(p.x,p.y,p.r,0,Math.PI*2,false);
+ctxC.fillStyle=`hsl(${Math.random()*360},75%,60%)`;
+ctxC.fill();
+
+p.y+=Math.cos(angle+p.d)+3;
+
+if(p.y>canvasC.height){
+p.y=-10;
+}
+
+}
+
+requestAnimationFrame(draw);
+}
+
+draw();
+
+setTimeout(()=>ctxC.clearRect(0,0,canvasC.width,canvasC.height),4000);
+
 }
 
 </script>
